[project]
name = ""
version = ""
description = ""
authors = [
    {name = "KuTaKe", email = "kutakke@outlook.com"},
]
dependencies = [
    "plyer>=2.1.0",
    "pydantic>=1.10.6",
    "loguru>=0.6.0",
    "httpx>=0.23.3",
    "lxml>=4.9.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.8.0",
]
