[project]
name = "DlUnzip"
version = "0.1.0"
description = ""
authors = [
    {name = "KuTaKe", email = "kutakke@outlook.com"},
]
dependencies = [
    "plyer>=2.1.0",
    "pydantic>=1.10.6",
    "loguru>=0.6.0",
    "httpx>=0.23.3",
    "lxml>=4.9.2",
    "sentry-sdk>=1.19.1",
    "rich>=13.4.2",
    "wexpect>=4.0.0",
    "setuptools>=68.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
unzip = "python ./src/dlunzip.py"
rmc = "python ./src/messyCode.py"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.8.0",
]
